working on major efforts... _chatbox - realtime(!!!)
NEXT??
_msgs - realtime
_sidemenu - for different rooms
_permissions - sharing rooms, unsharing

--- a/main.css
+++ b/main.css
@@ -28,3 +28,17 @@
     width: 100%;
 
 }
+
+.text{
+    font-size: 1.5em;
+    
+}
+
+.sender{
+    font-size: .8em;
+}
+
+.time{
+    font-size: .75em;
+
+}
